--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 
 * {
   font-family: "Poppins", "sans-serif";
+  scrollbar-width: none;
 }
 
 .loader {
@@ -14,6 +15,12 @@
   width: 40px;
   height: 40px;
   animation: spin 2s linear infinite;
+}
+
+.small-loader {
+  width: 20px;
+  height: 20px;
+  border-width: 2px;
 }
 
 @keyframes spin {
